--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "devDependencies": {
     "@capacitor/cli": "2.4.5",
     "@ionic/app-scripts": "3.2.4",
+    "prettier": "^2.2.1",
     "typescript": "^4.1.3"
   },
   "description": "An Ionic project"
