--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-statusbar": "^2.4.3",
     "dotenv": "^8.2.0",
-    "ionicons": "^3.0.0",
+    "ionicons": "^5.2.3",
+    "mojix-components": "file:.yalc/mojix-components",
     "mojix-components-module": "file:.yalc/mojix-components-module",
     "promise-polyfill": "^8.2.0",
     "rxjs": "^6.6.3",
