--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "start": "nps",
+    "test": "nps test",
+    "build:components": "nps build.components"
   },
   "dependencies": {
     "@angular/common": "~10.0.0",
@@ -21,6 +18,7 @@
     "@angular/router": "~10.0.0",
     "@capacitor/android": "^2.4.5",
     "@capacitor/core": "2.4.5",
+    "@capacitor/ios": "^2.4.5",
     "@ionic-native/core": "^5.30.0",
     "@ionic-native/http": "^5.30.0",
     "@ionic-native/splash-screen": "^5.30.0",
